Avoid overflow of a long text value inside SelectField in Firefox [MC-2784] (#543)
* Avoid overflow of single value inside SelectField in FF [MC-2784]

* Restrict width of the container

--- a/packages/ui/src/Select/SelectField.module.scss
+++ b/packages/ui/src/Select/SelectField.module.scss
@@ -31,6 +31,7 @@ $selectGroupHeading: ':global .hz-select-field__group-heading';
 
   #{$selectContainer} {
     flex: 1 1 auto;
+    max-width: 100%;
 
     @include c.typographyBodySmall;
   }
